# real-review

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
frontend/: README.md  next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/business/[id]/: not-found.tsx  page.tsx
frontend/src/app/business/[id]/reviews/: page.tsx
frontend/src/components/: Disclaimer.tsx  PFakeHistogram.tsx  RatingCompare.tsx  ReviewCard.tsx  ReviewList.tsx  SearchForm.tsx  Stars.tsx
frontend/src/lib/: api.ts  format.ts
notebooks/: 01_eda.ipynb
reports/: eda_philadelphia.md  labels_philadelphia.md  model_philadelphia.md  rrs_philadelphia.md
scripts/: build_eda_notebook.py
src/rrs/: __init__.py  config.py  eda.py  ingest.py  scoring.py
src/rrs/api/: app.py  data.py  signals.py
src/rrs/features/: __init__.py  build.py  content.py  context.py  embeddings.py  reviewer.py
src/rrs/labeling/: __init__.py  apply.py  constants.py  dup_text.py  enrich.py  lfs.py
src/rrs/modeling/: __init__.py  dataset.py  train.py
tests/: test_api.py  test_features.py  test_ingest.py  test_labeling.py  test_modeling.py  test_scoring.py
